Upcoming:
- All mob spawners were spawning pigs. This is fixed now

1.18-5.2.3:
- It's now possible to use random block palettes for streets too
- Big speed improvement in the Lost City profile selection screen when rendering the world preview
- Saplings in Lost City parks will generate trees again
- 'cityChance' now has double precision which makes it possible to make cities even more rare
- More expansions to the lost city api
- Fixed a problem with corridor generation. Too often it resulted in floating rails
- Fixed redstone torches not being correctly lit

1.18-5.2.2:
- New method in the API to load additional assets
- New API so that other mods can add custom profiles
- Chests could float if the building around it was destroyed by explosions

1.18-5.2.1:
- New createbuilding command to create a building
- Fixes in chest generation and lighting updates
- Fixed a potential race conditions with mods using the Lost Cities API

1.18-5.2.0:
- Another optimization on worldgen
- Fixed a problem with connecting walls and glass slabs that got broken in the previous release
- Fixed a bug in the explosion correction code
- Much better explosion damage propagation upwards so that there is less floating geometry
- Code cleanups and small fixes
- New feature where a building can override the palette used by the parts
- Added 3 new building types using that feature with more modern building blocks
- Fixed placement of torches

1.18-5.1.2:
- Much more stable way to generate the Lost City chunks. No more worldgen warnings and tallbuildings profile works again
- MUCH faster way to detect (and delete) floating building parts after being damaged by explosions. It is however slightly less accurate

1.18-5.1.1:
- Fixed a problem with the seed of the custom dimension

1.18-5.1.0:
- Port to 1.18.2

1.18-5.0.4:
- API for registering Lost City dimensions
- Improved placement of wallblocks

1.18-5.0.3: